# gem-dota

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
architecture/: index.html
docs/: architecture.md  changelog.md  hooks.py  index.md  legacy-index.md  package-lock.json  package.json  replay-parser.md
docs/.vitepress/: config.mts
docs/concepts/: combat_log.md  dem_format.md  entity_system.md  index.md  protobuf.md
docs/cookbook/: bits-and-bytes-primer.md  index.md  proto-dota2-catalog.md  proto-parsing-pipeline.md
docs/deep-dives/: event-layer.md  extractors-layer.md  index.md  match-assembly-layer.md  parser-layer.md  replay-edge-cases.md  sendtable-layer.md  state-layer.md  stream-layer.md
docs/experimental/: estimate-vision.md  farming-patterns.md  index.md  rosh-conversion.md  vision-modifiers.md
docs/guides/: 01_quickstart.md  02_entity_state.md  03_combat_log.md  04_match_data.md  05_timeseries.md  06_teamfights.md  07_custom_extractors.md  08_laning.md  09_cli.md  10_json_output.md  index.md  replay-api.md  troubleshooting.md
docs/notes/: deployment-note-mode2.md  farming-camp-attribution.md  rust-port-plan.md
docs/reference/: analysis.md  batch.md  combat_aggregator.md  combatlog.md  constants.md  dataframes.md  entities.md  enums.md  field_decoder.md  field_path.md  game_events.md  index.md  match_builder.md  models.md  parser.md  reader.md  sendtable.md  stream.md  string_table.md
docs/reports/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: 01_reading_a_replay.md  02_entity_state.md  02_schema.md  03_combat_log.md  04_timeseries.md  05_full_match.md  index.md
docs/understanding/: 01_protobuf.md  02_dem_format.md  03_snappy.md  04_send_tables.md  05_field_paths.md  06_field_decoders.md  07_string_tables.md  08_entity_system.md  09_combat_log.md  10_game_events.md  index.md
examples/: README.md  draft_summary.py  extraction_demo.py  hero_snapshot.py  match_report.py  movement_heatmap.py  movement_log.py  phase1_stream.py  phase2_schema.py  phase3_entities.py  quickstart.py  replay_api_server.py  steam_match_info.py  teamfight_report.py  ward_smoke_rosh.py
examples/report/: __init__.py  assets.py  helpers.py  html_sections.py  movement.py  style.py
guides/: index.html
guides/01_quickstart/: index.html
guides/02_entity_state/: index.html
guides/03_combat_log/: index.html
guides/04_match_data/: index.html
guides/05_timeseries/: index.html
guides/06_teamfights/: index.html
guides/07_custom_extractors/: index.html
guides/08_laning/: index.html
guides/09_cli/: index.html
guides/10_json_output/: index.html
guides/troubleshooting/: index.html
notebooks/: illustration.ipynb
reference/: index.html
reference/analysis/: index.html
reference/batch/: index.html
reference/combat_aggregator/: index.html
reference/combatlog/: index.html
reference/constants/: index.html
reference/dataframes/: index.html
reference/entities/: index.html
reference/enums/: index.html
reference/extractors/: index.html
reference/field_decoder/: index.html
reference/field_path/: index.html
reference/game_events/: index.html
reference/match_builder/: index.html
reference/models/: index.html
reference/parser/: index.html
reference/reader/: index.html
reference/sendtable/: index.html
reference/stream/: index.html
reference/string_table/: index.html
reports/: index.html
scripts/: benchmark.py  build_constants.py  compile_protos.py  download_protos.sh  fetch_hero_icons.py  fetch_hero_npc_names.py  fetch_item_icons.py  fetch_leagues.py  fetch_replays.py  generate_proto_field_docs.py  generate_vitepress_api_reference.py  release.sh  render_camp_zones_overlay.py  validate_opendota.py
search/: search_index.json
src/gem/: __init__.py  __main__.py  analysis.py  batch.py  combat_aggregator.py  combatlog.py  constants.py  dataframes.py  entities.py  field_decoder.py  field_path.py  field_reader.py  field_state.py  game_events.py  map_context.py  match_builder.py  models.py  parser.py  reader.py  replay_fetch.py  rosh_conversion.py  sendtable.py  stream.py  string_table.py
tests/: conftest.py  test_ability_courier_draft_stuns.py  test_agentic_helpers.py  test_analysis.py  test_bulk.py  test_cli.py  test_combat_aggregator.py  test_combatlog.py  test_constants.py  test_dataframes.py  test_draft_extractor.py  test_draft_integration.py  test_entities.py  test_entities_extended.py  test_extractors.py  test_field_decoder.py  test_field_decoder_extended.py  test_field_path.py  test_field_path_ops.py  test_field_reader.py  test_field_state.py  test_find_player.py  test_fuzz.py  test_game_events.py  test_html_sections.py  test_lane.py  test_map_context.py  test_match_builder.py  test_ml_running_totals.py  test_models.py  test_objectives_extractor.py  test_parquet_export.py  test_parser.py  test_players_extractor.py  test_reader.py  test_reader_extended.py  test_rosh_conversion.py  test_sendtable.py  test_serialization.py  test_stream.py  (+5 more)
understanding/: index.html
understanding/01_protobuf/: index.html
understanding/02_dem_format/: index.html
understanding/03_snappy/: index.html
understanding/04_send_tables/: index.html
understanding/05_field_paths/: index.html
understanding/06_field_decoders/: index.html
understanding/07_string_tables/: index.html
(+274 files in other folders)
